objects/L2I_Order_Activation_Execution_Log__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Date__c</fullName>
        <label>Batch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Name__c</fullName>
        <label>Log Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step1_Entry_Time__c</fullName>
        <label>Step1 Entry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step1_Exit_Time__c</fullName>
        <label>Step1 Exit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step1_Log_Message__c</fullName>
        <label>Step1 Log Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step1_Name__c</fullName>
        <label>Step1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step1_Status__c</fullName>
        <label>Step1 Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step2_Entry_Time__c</fullName>
        <label>Step2 Entry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step2_Exit_Time__c</fullName>
        <label>Step2 Exit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step2_Log_Message__c</fullName>
        <label>Step2 Log Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step2_Name__c</fullName>
        <label>Step2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step2_Status__c</fullName>
        <label>Step2 Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step3_Entry_Time__c</fullName>
        <label>Step3 Entry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step3_Exit_Time__c</fullName>
        <label>Step3 Exit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step3_Log_Message__c</fullName>
        <label>Step3 Log Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step3_Name__c</fullName>
        <label>Step3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step3_Status__c</fullName>
        <label>Step3 Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Order Contract Management Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Log_Name__c</columns>
        <columns>Step1_Entry_Time__c</columns>
        <columns>Step1_Status__c</columns>
        <columns>Step2_Entry_Time__c</columns>
        <columns>Step2_Status__c</columns>
        <columns>Step3_Entry_Time__c</columns>
        <columns>Step3_Status__c</columns>
        <columns>Step4_Entry_Time__c</columns>
        <columns>Step4_Status__c</columns>
        <columns>Step5_Entry_Time__c</columns>
        <columns>Step5_Status__c</columns>
        <columns>Step6_Entry_Time__c</columns>
        <columns>Step6_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OAL-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Contract Management Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>